[gd_scene load_steps=59 format=3 uid="uid://cphi0cg2safub"]

[ext_resource type="Script" uid="uid://1kiapugm7kgr" path="res://scripts/util/debug_commands.gd" id="1_b4stf"]
[ext_resource type="Script" uid="uid://fljgdlvfv1gh" path="res://scripts/level.gd" id="1_c1pbi"]
[ext_resource type="Shader" uid="uid://v4s45bekv3ew" path="res://shaders/post_processing.gdshader" id="1_fdta4"]
[ext_resource type="Script" uid="uid://s36af8eoblro" path="res://scripts/puzzle_controller_3d.gd" id="1_yob6b"]
[ext_resource type="Script" uid="uid://dra4lijujrmwu" path="res://scripts/puzzle_viewport.gd" id="2_f1g4q"]
[ext_resource type="Script" uid="uid://b4k1w2j2r7scw" path="res://scripts/camera/camera_shake.gd" id="2_inhaj"]
[ext_resource type="Script" uid="uid://cr08p4p1ek04c" path="res://scripts/scream_controller.gd" id="3_38a0a"]
[ext_resource type="Script" uid="uid://dih8wwvotb5tk" path="res://scripts/puzzle_drawer.gd" id="3_b4stf"]
[ext_resource type="Script" uid="uid://dcnqwn1puo4h" path="res://scripts/resources/grid_mesh_3d.gd" id="3_ygxcr"]
[ext_resource type="Script" uid="uid://dknyji6pxyqm3" path="res://scripts/wiggle_shader_controller.gd" id="4_dogtj"]
[ext_resource type="Material" uid="uid://ljxvvcm1awo" path="res://materials/knife.tres" id="4_swwbn"]
[ext_resource type="Script" uid="uid://c0qfearwpscmu" path="res://scripts/puzzle_input_handler.gd" id="4_uhc1k"]
[ext_resource type="Script" uid="uid://cdsemgxjyhjng" path="res://scripts/cursor.gd" id="4_ygxcr"]
[ext_resource type="AudioStream" uid="uid://qqqdbf6uaebt" path="res://audio/sfx/screaming/male_0/yell1.wav" id="5_4vhcd"]
[ext_resource type="AudioStream" uid="uid://dbi443gwhx06d" path="res://audio/sfx/knife_swoosh/swoosh 01.wav" id="6_lshh4"]
[ext_resource type="AudioStream" uid="uid://cdapfeekeoc28" path="res://audio/sfx/screaming/male_0/yell2.wav" id="6_vljie"]
[ext_resource type="AudioStream" uid="uid://jlpfc08lort5" path="res://audio/sfx/knife_swoosh/swoosh 02.wav" id="7_485ri"]
[ext_resource type="AudioStream" uid="uid://c6t78vnohu37f" path="res://audio/sfx/screaming/male_0/yell3.wav" id="7_k5ltf"]
[ext_resource type="PackedScene" uid="uid://bn5c6wv3oppsw" path="res://scenes/blood_particles.tscn" id="7_lip14"]
[ext_resource type="Script" uid="uid://brmgweuwi3o8i" path="res://scripts/simulation/flesh_sim_3d.gd" id="7_xrhyx"]
[ext_resource type="AudioStream" uid="uid://dbefml854bgp7" path="res://audio/sfx/knife_swoosh/swoosh 03.wav" id="8_756ie"]
[ext_resource type="Script" uid="uid://bk1vxm6ujfddn" path="res://scripts/resources/body_mesh_3d.gd" id="8_gl5h8"]
[ext_resource type="AudioStream" uid="uid://cuhoe6smj5fk8" path="res://audio/sfx/screaming/male_0/yell4.wav" id="8_marrl"]
[ext_resource type="AudioStream" uid="uid://bamafxp08a4a6" path="res://audio/sfx/screaming/male_0/yell5.wav" id="9_nps1a"]
[ext_resource type="AudioStream" uid="uid://b33wyto8ta40p" path="res://audio/sfx/knife_swoosh/swoosh 04.wav" id="9_ychbj"]
[ext_resource type="AudioStream" uid="uid://11oyidj1dpgr" path="res://audio/sfx/screaming/male_0/yell6.wav" id="10_76jtm"]
[ext_resource type="AudioStream" uid="uid://duvmbybc05c3p" path="res://audio/sfx/knife_swoosh/swoosh 05.wav" id="10_s712l"]
[ext_resource type="AudioStream" uid="uid://iajicthaslby" path="res://audio/sfx/screaming/male_0/yell7.wav" id="11_82w65"]
[ext_resource type="AudioStream" uid="uid://djlyuiulbt0ab" path="res://audio/sfx/knife_swoosh/swoosh 06.wav" id="11_iwkrh"]
[ext_resource type="AudioStream" uid="uid://btdhobhokmep3" path="res://audio/sfx/knife_impact/impact 01.wav" id="12_lliyq"]
[ext_resource type="AudioStream" uid="uid://c8ij0ba7fynhv" path="res://audio/sfx/screaming/male_0/yell8.wav" id="12_pr4tx"]
[ext_resource type="AudioStream" uid="uid://c4k1n6dd4s7hc" path="res://audio/sfx/screaming/male_0/yell11.wav" id="13_bf564"]
[ext_resource type="AudioStream" uid="uid://ctytmj5t0d3ed" path="res://audio/sfx/knife_impact/impact 02.wav" id="13_dogtj"]
[ext_resource type="AudioStream" uid="uid://cnuqfvndwgfd0" path="res://audio/sfx/knife_impact/impact 03.wav" id="14_lip14"]
[ext_resource type="AudioStream" uid="uid://dp6k3gk32yjqg" path="res://audio/sfx/knife_impact/impact 04.wav" id="15_fdta4"]
[ext_resource type="AudioStream" uid="uid://buvt3h567ypjp" path="res://audio/sfx/knife_impact/impact 05.wav" id="16_38a0a"]
[ext_resource type="AudioStream" uid="uid://cvani8d6cmwfh" path="res://audio/sfx/knife_impact/impact 06.wav" id="17_uep1p"]
[ext_resource type="Material" uid="uid://1jbeha805keo" path="res://materials/wiggle_material_outer.tres" id="19_dogtj"]
[ext_resource type="Material" uid="uid://6maqubq4rapg" path="res://materials/wiggle_material_inner.tres" id="21_dogtj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lip14"]
shader = ExtResource("1_fdta4")
shader_parameter/vignetteRadius = 3.0
shader_parameter/vignetteAlpha = 1.0

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f1g4q"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_b4stf"]
sky_material = SubResource("ProceduralSkyMaterial_f1g4q")

[sub_resource type="Environment" id="Environment_ygxcr"]
background_mode = 1
background_color = Color(0.0375587, 0.0434715, 0.0536116, 1)
sky = SubResource("Sky_b4stf")
ambient_light_source = 2
ambient_light_color = Color(0.328767, 0.3255, 0.35, 1)
tonemap_mode = 2
glow_enabled = true

[sub_resource type="FastNoiseLite" id="FastNoiseLite_g68k2"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_v280i"]
seed = 1

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uhc1k"]
seed = 3

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uclkp"]
streams_count = 9
stream_0/stream = ExtResource("5_4vhcd")
stream_1/stream = ExtResource("6_vljie")
stream_2/stream = ExtResource("7_k5ltf")
stream_3/stream = ExtResource("8_marrl")
stream_4/stream = ExtResource("9_nps1a")
stream_5/stream = ExtResource("10_76jtm")
stream_6/stream = ExtResource("11_82w65")
stream_7/stream = ExtResource("12_pr4tx")
stream_8/stream = ExtResource("13_bf564")

[sub_resource type="PrismMesh" id="PrismMesh_uhc1k"]
material = ExtResource("4_swwbn")
left_to_right = 1.0
size = Vector3(0.295, 0.88, 0.2)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_swwbn"]
streams_count = 6
stream_0/stream = ExtResource("6_lshh4")
stream_1/stream = ExtResource("7_485ri")
stream_2/stream = ExtResource("8_756ie")
stream_3/stream = ExtResource("9_ychbj")
stream_4/stream = ExtResource("10_s712l")
stream_5/stream = ExtResource("11_iwkrh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jcay4"]
streams_count = 6
stream_0/stream = ExtResource("12_lliyq")
stream_1/stream = ExtResource("13_dogtj")
stream_2/stream = ExtResource("14_lip14")
stream_3/stream = ExtResource("15_fdta4")
stream_4/stream = ExtResource("16_38a0a")
stream_5/stream = ExtResource("17_uep1p")

[sub_resource type="Gradient" id="Gradient_inhaj"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.172727, 0.333333)
colors = PackedColorArray(0.94, 0.1504, 0.1504, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_swwbn"]
seed = -1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_u2txl"]
width = 64
height = 64
color_ramp = SubResource("Gradient_inhaj")
noise = SubResource("FastNoiseLite_swwbn")

[sub_resource type="Gradient" id="Gradient_v280i"]
offsets = PackedFloat32Array(0, 0.351515)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_v280i"]
width = 64
height = 64
color_ramp = SubResource("Gradient_v280i")
noise = SubResource("FastNoiseLite_swwbn")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1koi6"]
albedo_color = Color(0.778308, 0.807507, 0.853954, 1)
albedo_texture = SubResource("NoiseTexture2D_u2txl")
metallic = 0.63
metallic_specular = 1.0
metallic_texture = SubResource("NoiseTexture2D_v280i")
roughness = 0.59
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lip14"]
shading_mode = 2
albedo_color = Color(0.465682, 0.327682, 0.168387, 1)
metallic = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v280i"]
albedo_color = Color(0.920884, 0.707924, 0.675801, 1)

[node name="Level" type="Node3D"]
script = ExtResource("1_c1pbi")

[node name="PostProcessing" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="PostProcessing"]
material = SubResource("ShaderMaterial_lip14")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ygxcr")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.89235, 0)
light_energy = 5.144
shadow_enabled = true
spot_range = 28.581
spot_angle = 74.54
spot_angle_attenuation = 1.31951

[node name="DebugCommands" type="Node" parent="."]
script = ExtResource("1_b4stf")

[node name="CameraSystem" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.45724, 1.52302)

[node name="CameraShake" type="Node3D" parent="CameraSystem"]
script = ExtResource("2_inhaj")
pitch_noise = SubResource("FastNoiseLite_g68k2")
yaw_noise = SubResource("FastNoiseLite_v280i")
roll_noise = SubResource("FastNoiseLite_uhc1k")
max_pitch = 6.0
max_yaw = 6.0
max_roll = 6.0
decay = 0.85

[node name="Camera3D" type="Camera3D" parent="CameraSystem/CameraShake"]
transform = Transform3D(1, 0, 0, 0, 0.494458, 0.869202, 0, -0.869202, 0.494458, 0, 0, 0)

[node name="PuzzleController" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("1_yob6b")
camera = NodePath("../CameraSystem/CameraShake/Camera3D")

[node name="ScreamController" type="AudioStreamPlayer3D" parent="PuzzleController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.45724, -22.0389)
stream = SubResource("AudioStreamRandomizer_uclkp")
unit_size = 30.0
bus = &"SFX"
script = ExtResource("3_38a0a")

[node name="WiggleShaderController" type="Node" parent="PuzzleController"]
script = ExtResource("4_dogtj")
wiggle_materials = Array[ShaderMaterial]([ExtResource("19_dogtj"), ExtResource("21_dogtj")])

[node name="KnifeCursor" type="Node3D" parent="PuzzleController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42609, 0)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="PuzzleController/KnifeCursor"]
autoplay = true
bus = &"SFX"

[node name="Mesh" type="Node3D" parent="PuzzleController/KnifeCursor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.494684, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PuzzleController/KnifeCursor/Mesh"]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0.0531429, -0.338, 0)
mesh = SubResource("PrismMesh_uhc1k")
skeleton = NodePath("../..")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="PuzzleController/KnifeCursor/Mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.71137, 0)
radius = 0.1
height = 3.69531
material = ExtResource("4_swwbn")

[node name="PuzzleInputHandler" type="Node" parent="PuzzleController" node_paths=PackedStringArray("cursor", "cursor_sfx_player")]
script = ExtResource("4_uhc1k")
cursor = NodePath("../KnifeCursor")
cursor_particles_scene = ExtResource("7_lip14")
cursor_sfx_player = NodePath("../KnifeCursor/AudioStreamPlayer3D")
knife_swoosh_sounds = SubResource("AudioStreamRandomizer_swwbn")
knife_impact_sounds = SubResource("AudioStreamRandomizer_jcay4")

[node name="BodyMesh3D" type="MeshInstance3D" parent="PuzzleController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0162085, 0)
skeleton = NodePath("../..")
script = ExtResource("8_gl5h8")
temp_outer_mat = ExtResource("19_dogtj")
temp_inner_mat = ExtResource("21_dogtj")
metadata/_custom_type_script = "uid://bk1vxm6ujfddn"

[node name="PuzzleMesh" type="MeshInstance3D" parent="PuzzleController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0686853, 0)
gi_mode = 0
script = ExtResource("3_ygxcr")
metadata/_custom_type_script = "uid://dcnqwn1puo4h"

[node name="PuzzleViewport" type="SubViewport" parent="PuzzleController"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(100, 100)
script = ExtResource("2_f1g4q")

[node name="PuzzleDrawer" type="Control" parent="PuzzleController/PuzzleViewport"]
top_level = true
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_b4stf")

[node name="Cursor" type="Control" parent="PuzzleController/PuzzleViewport"]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ygxcr")
hint_color = Color(0.529066, 0.529067, 0.529067, 1)

[node name="PuzzleUIContainer" type="Control" parent="PuzzleController/PuzzleViewport"]
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 96.0

[node name="FleshSim3D" type="Node3D" parent="PuzzleController"]
visible = false
script = ExtResource("7_xrhyx")
hide_fixed = false

[node name="OperatingTable" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.39389, 0)
size = Vector3(23.7158, 1, 34.3005)
material = SubResource("StandardMaterial3D_1koi6")

[node name="StaticBody" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -6.85629, -10.5928)
radius = 6.76855
height = 14.5913
sides = 16
material = ExtResource("19_dogtj")

[node name="StaticBody3" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -7.01164, -3.52846)
radius = 7.2
height = 1.0
sides = 32
material = SubResource("StandardMaterial3D_lip14")

[node name="CSGBox3D" type="CSGBox3D" parent="StaticBody3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.38419e-07, 6.92098)
size = Vector3(2.2832, 0.828125, 0.605713)

[node name="StaticBody4" type="CSGCylinder3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 7.11156, -2.48915, -11.6074)
radius = 2.7
height = 1.0
sides = 32
material = SubResource("StandardMaterial3D_lip14")

[node name="CSGBox3D" type="CSGBox3D" parent="StaticBody4"]
transform = Transform3D(1, 0, 0, 0, 1, 8.35187e-23, 0, 8.35187e-23, 1, 0, 0, 2.52121)
size = Vector3(2.2832, 0.828125, 0.605713)

[node name="StaticBody5" type="CSGCylinder3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -7.112, -2.489, -11.607)
radius = 2.7
height = 1.0
sides = 32
material = SubResource("StandardMaterial3D_lip14")

[node name="CSGBox3D" type="CSGBox3D" parent="StaticBody5"]
transform = Transform3D(1, 0, 0, 0, 1, 8.35187e-23, 0, 8.35187e-23, 1, 0, 0, 2.52121)
size = Vector3(2.2832, 0.828125, 0.605713)

[node name="StaticBody2" type="CSGCylinder3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, -2.31275, -11.5261)
radius = 2.0
height = 38.255
sides = 16
material = ExtResource("19_dogtj")

[node name="Organs" type="Node" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Organs"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1.45688, 1.37151)
size = Vector3(1.33984, 1.14868, 1)
material = SubResource("StandardMaterial3D_v280i")

[node name="CSGBox3D2" type="CSGBox3D" parent="Organs"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1.66201, -1.45738, -0.927985)
size = Vector3(0.798828, 2.00452, 0.722168)
material = SubResource("StandardMaterial3D_v280i")

[node name="CSGBox3D3" type="CSGBox3D" parent="Organs"]
transform = Transform3D(-0.139363, -0.990241, -4.32848e-08, 0, -4.37114e-08, 1, -0.990241, 0.139363, 6.09176e-09, -0.217219, -1.45738, -1.64828)
size = Vector3(0.798828, 2.56378, 0.722168)
material = SubResource("StandardMaterial3D_v280i")

[node name="CSGBox3D6" type="CSGBox3D" parent="Organs"]
transform = Transform3D(0.204598, -0.978846, -4.27867e-08, 0, -4.37114e-08, 1, -0.978846, -0.204598, -8.94329e-09, 0.430104, -1.29133, -2.393)
size = Vector3(0.798828, 2.56378, 0.722168)
material = SubResource("StandardMaterial3D_v280i")

[node name="CSGBox3D4" type="CSGBox3D" parent="Organs"]
transform = Transform3D(-0.0303467, -0.999539, -4.36913e-08, 0, -4.37114e-08, 1, -0.999539, 0.0303467, 1.3265e-09, -1.25855, -1.45738, -2.37771)
size = Vector3(0.798828, 0.795181, 0.722168)
material = SubResource("StandardMaterial3D_v280i")

[node name="CSGBox3D5" type="CSGBox3D" parent="Organs"]
transform = Transform3D(-0.0303467, -0.999539, -4.36913e-08, 0, -4.37114e-08, 1, -0.999539, 0.0303467, 1.3265e-09, 1.59959, -1.45738, -2.35511)
size = Vector3(1.06104, 0.795181, 0.722168)
material = SubResource("StandardMaterial3D_v280i")

[node name="TempOrgans" type="CSGBox3D" parent="Organs"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.0905103, -1.44412, -0.305045)
size = Vector3(2.32575, 2.27, 0.464)
material = SubResource("StandardMaterial3D_v280i")

[node name="TempOrgans2" type="CSGBox3D" parent="Organs"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.0905103, -1.44412, -0.305045)
size = Vector3(2.32575, 2.27, 0.464)
material = SubResource("StandardMaterial3D_v280i")
